mockers_derive/tests/compile-fail/extern_block_name.rs
use mockers_derive::mocked;

#[mocked]
extern {
    fn foo();
}

fn main() {}
